feat: add receipts crud service
